--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <table align="left" width="150px" style="max-width: 100%;" cellspacing="0" cellpadding="0" border="0" >
                     <tr>
                         <td>
-                            <img width="150px" style="padding: 10px 5px 10px 5px;" src="./images/pic.png" alt="">
+                            <img width="150px" style="padding: 10px 5px 10px 5px;" src="https://ibb.co/WyZVWS6" alt="">
                         </td>
                     </tr>
                 </table>
